# merkledrop

./: .gitignore  MerkleAirdropToken.sol  README.md  build_address_index.py  build_merkle.py  foundry.toml  merkle_proof.py  merkleroot.txt  package-lock.json  package.json  reconstruct.py
contracts/: MerkleAirdropVerifier.sol
proof-worker/: wrangler.toml
proof-worker/src/: index.ts
rust-merkle/: Cargo.toml
rust-merkle/src/: main.rs
rust_builder/: Cargo.toml
rust_builder/src/: build_merkle.rs  main.rs
scripts/: build-merkle.js
test/: MerkleAirdropVerifier.t.sol
